Fixed header alignment using grid

--- a/project-blackbird/src/home.css
+++ b/project-blackbird/src/home.css
@@ -1,30 +1,45 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 /*BASE COMPONENTS*/
-.container {
+.header {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 0.4fr 2fr 0.6fr;
+    grid-template-rows: 1fr;
     grid-auto-columns: 1fr;
     grid-auto-rows: 1fr;
     gap: 0px 0px;
     grid-auto-flow: row;
     grid-template-areas:
       "header-left header-right"
-      "body body"
-      "footer footer";
   }
-  
-  .header {
-     grid-area: header;
-
-     }
 
   .header-left {
-     grid-area: header-left;
-     background: #FFF500;
-     }
-  .header-right { 
+    display: grid;
+    width: 100%;
+    grid-area: header-left;
+    background: #FFF500;
+    justify-content: center;
+    align-items: center;
+    grid-auto-flow: column;
+  }
+
+  
+.header-right {
+    display: grid;
+    width: 100%;
     grid-area: header-right;
     background: #FFF500;
+    justify-content: center;
+    align-items: center;
+    grid-auto-flow: column;
+}
+
+.header-right > h2:not(:last-child) {
+  padding-right: 20px;
 }
   
   .body { 
@@ -45,23 +60,14 @@
 
   /*HEADER*/
   #logotext{
-    padding-top: 0.7em;
-    width: 600px;
+
   }
   
   #logo{
-    float:left;
-    padding-left: 6em;
-    padding-top: 1em;
-    padding-bottom: 1em;
-    padding-right: 1.2em;
+    
   }
 
   .headertabs{
     font-family: Inter;
     font-weight: 200;
-    float: right;
-    padding-left: 1em;
-    padding-right: 1em;
-    padding-top: 1em;
   }
